included unit test

--- a/PhoneBookSPA/appsettings.json
+++ b/PhoneBookSPA/appsettings.json
@@ -1,10 +1,11 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "MockData":"http://www.mocky.io/v2/581335f71000004204abaf83",
+  "AllowedHosts": "*"
 }
