--- a/PhoneBookSPA.Services/PhoneBookSPA.Services.csproj
+++ b/PhoneBookSPA.Services/PhoneBookSPA.Services.csproj
@@ -9,5 +9,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
   </ItemGroup>
 </Project>
