Created docker files

--- a/PhoneBookSPA/PhoneBookSPA.csproj
+++ b/PhoneBookSPA/PhoneBookSPA.csproj
@@ -7,6 +7,8 @@
     <IsPackable>false</IsPackable>
     <SpaRoot>ClientApp\</SpaRoot>
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
+    <DockerComposeProjectPath>../docker-compose.dcproj</DockerComposeProjectPath>
+    <UserSecretsId>4bee0213-9a96-4ea9-886d-77b285c01251</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
