--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,11 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+
+- task: AzureRmWebAppDeployment@4
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'Vijay Subscription 1(2be365c8-331b-4a05-92d6-7d4512ea95a6)'
+    appType: 'webApp'
+    WebAppName: 'azspa'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
